--- a/sweep.yaml
+++ b/sweep.yaml
@@ -4,60 +4,63 @@ metric:
   name: train_loss
 parameters:
   g:
-    distribution: int_uniform
-    max: 20
-    min: 5
+    distribution: categorical
+    vals:
+      - 5
+      - 10
+      - 20
   lr_main:
     distribution: uniform
     max: 0.01
     min: 0.0001
   n_epochs:
-    value: 750
+    value: 2000
   nle:
     distribution: categorical
     values: 
       - 4
-      - 15
   output_dir:
     distribution: categorical
     values:
       - /engram/naplab/users/ms7240/results
   prediction_offset:
-    value: 250
+    value: 300
   prefloss:
     distribution: categorical
     values:
       - "false"
   randmanseed:
     distribution: int_uniform
-    max: 2
+    max: 3
     min: 1
   seed_init:
     distribution: int_uniform
-    max: 2
+    max: 3
     min: 1
   seed_train:
     distribution: int_uniform
-    max: 2
+    max: 3
     min: 1
   seedONS:
     distribution: int_uniform
-    max: 2
+    max: 3
     min: 1
   sigma_Win:
     distribution: uniform
-    max: 12
-    min: 0.5
+    max: 8
+    min: 0.05
   sigma_v1:
     distribution: uniform
-    max: 12
-    min: 0.5
+    max: 8
+    min: 0.05
   trainable_dt:
     distribution: categorical
     values:
+      - "true"
       - "false"
   trainable_tau:
     distribution: categorical
     values:
+      - "true"
       - "false"
 program: train.py
